--- a/Frames_Pages/Frames_Pages.csproj
+++ b/Frames_Pages/Frames_Pages.csproj
@@ -154,6 +154,9 @@
   <ItemGroup>
     <Resource Include="Resources\messageboxbackground.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\bg1.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
